# MyOpenGLProject

./: CMakeLists.txt  README.md
src/: Shader.h  example01.cpp  example02.cpp  example03.cpp  glad.c  glad.h  main.cpp
src/shaders/: fragment.frag.glsl  vertex.vert.glsl
